--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -1,26 +1,15 @@
 <!-- TODO: Add boolean for hide/show -->
 <div class="col-xs-12">
   <h1>Todo List</h1>
-  <div class="row">
-    <div class="col-xs-6 col-xs-offset-3">
-      <div class="input-group">
-        <span class="input-group-btn">
-          <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
-        </span>
-        <!-- TODO: Bind the input to our todo list -->
-        <input type="text" class="form-control" placeholder="Search for...">
-      </div>
-    </div>
-  </div>
+  
   <div>
-      {{itemInfo}}
-    <div ng-repeat='item in items' class="panel panel-default">
+    <div ng-repeat='item in items | filter: searchTerm.searchTerm' class="panel panel-default">
       <div class="panel-body">
         <div class="col-xs-1"><input type="checkbox" name=""/></div>
         <div class="col-xs-7"><a ng-href='#!/items/deets/{{item.id}}'>{{item.task}}</a></div>
         <div class="col-xs-2">{{item.dueDate}}</div>
         <div class="col-xs-1">{{item.assignedTo}}</div>
-        <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
+        <div class="col-xs-1"><button ng-click='deleteItem(item.id)' class="btn btn-danger">X</button></div>
       </div>
     </div>
   </div>
