--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -1,7 +1,7 @@
 <!-- TODO: Add boolean for hide/show -->
 <div class="col-xs-12">
   <h1>Todo List</h1>
-  
+  <h2>{{message}}</h2>
   <div>
     <div ng-repeat='item in items | filter: searchTerm.searchTerm' class="panel panel-default">
       <div class="panel-body">
